--- a/phase3/AnimeWebsite/Styles/Stylesheet.css
+++ b/phase3/AnimeWebsite/Styles/Stylesheet.css
@@ -21,11 +21,11 @@ body p
 
 #banner
 {
-    background-image: url(../Images/banner.jpg);
+    background-image: url(../Images/up.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     border: 5px solid #dedede;    
-    height: 200px;
+    height: 300px;
 }
 
 #content_area
@@ -56,7 +56,7 @@ footer
     text-align: center;
     color: #fff;
     text-shadow: 0.1em 0.1em #333;
-    background-image: url(../Images/bar_background.png);
+    background-image: url(../Images/bar_background2.png);
 }
 
 #navigation
@@ -65,7 +65,7 @@ footer
     border: 3px solid #E3E3E3;
     margin-top: 20px;
     text-shadow: 0.1em 0.1em #333;
-    background-image: url(../Images/bar_background.png);
+    background-image: url(../Images/bar_background2.png);
 }
 
 #nav
