--- a/phase3/AnimeWebsite/Styles/Stylesheet.css
+++ b/phase3/AnimeWebsite/Styles/Stylesheet.css
@@ -165,5 +165,19 @@ footer
 	width:100px;
 }
 
+.animeTable
+{
+    width: 1000px;
+    height: 250px;
+    margin: 20px 20px 20px 0;
+    border: 4px solid #E3E3E3;
+    border-radius: 30px;
+    moz-border-radius: 20px;
+}
 
-
+.animeTable img
+{
+    padding: 0px 10px 10px 10px;
+    height: 350px;
+    width: 250px;
+}
